* Added: metaWeblog.newMediaObject for image upload over the MovableType API
  (thanks, Melonking906).
* Added: Global 'offset' can be set by URL parameters.
* Added: 'lang' attribute to <txp:page_url />.
* Added: <txp:if_items_count /> tag.
* Added: Reload language packs from disk.
* Added: Shift+Space shortcut for 'Tab' indent in textareas.
* Added: Input length tooltip when appropriate.
* Changed: Plugins of all types trigger verify step (with improved security).
* Changed: File Edit panel has the ability to rename and delete files, and
  change the download counter value (thanks, adi).
* Changed: Image Edit panel has the ability to delete images.
* Changed: In-use languages can not be deleted.
* Changed: Image tags can take HTML attributes.
* Changed: Less collision-prone custom fields name processing.
* Changed: Do not generate empty syndication feeds for feedless sections.
* Changed: Allow PHP scripting options off by default, and Diagnostics warning.
* Changed: Introduce primary keys for all database tables, replacing some old
  indexes.
* Changed: Category & section description field sizes increased to 1023.
* Changed: <txp:header /> tag requires 'form' privilege.
* Changed: Section-aware default search.
* Developer: Introduce UI class library for building interface components.
* Developer: Tag registration is now mandatory.
* Developer: Some of the lesser-used tags are loaded on demand from their class
  to save memory. Plugins must call them via processTags() function.
* Developer: Add safe_exists() function to database layer.
* Developer: Move $thisversion and $txp_is_dev to constants.php.
* Developer: 'Visitor logs' panel is now bound to the new 'lore' event name (was: 'log') to prevent conflicts with privacy filters.
* jQuery 3.7.1.
* Textile 4.1.0. See https://github.com/textile/php-textile/releases/ for full
  list of changes in this release (thanks, gocom).
* PrismJS 1.29.0.
* DOMPurify 3.0.6
* PHPMailer 6.9.1

Changes in 4.8.8 (24 Jan 2022)
