@@ -3102,7 +3102,7 @@ function if_request($atts, $thing = null)
 
 function txp_eval($atts, $thing = null)
 {
-    global $prefs, $txp_tag, $txp_atts;
+    global $prefs, $txp_tag, $txp_atts, $variable;
     static $xpath = null, $functions = null, $_functions = null,
         $tr = array("'" => "',\"'\",'");
 
@@ -3158,9 +3158,7 @@ function txp_eval($atts, $thing = null)
             );
         }
 
-        if (isset($alias) && $alias = implode('|', do_list($alias))) {
-            global $variable;
-
+        if (isset($alias) && $alias = implode('|', $alias === true ? array_keys($variable) : do_list($alias))) {
             $query = preg_replace_callback('/\$('.$alias.')\b/',
                 function ($match) use ($variable, $tr) {
                     $var = isset($variable[$match[1]]) ? $variable[$match[1]] : '';
